# discrete-math-MM-2025-2026

./: CMakeLists.txt  README.md  main.cpp
src/: analyzer.cpp  analyzer.h  general.h  graph.cpp  graph.h
src/other/: other.cpp  other.h
src/parsers/: parser.cpp  parser.h
src/summarizer/: summarizer.cpp  summarizer.h
summarized/: Email-EuAll.txt.json
summarized/directed/: Wiki-Vote.json  soc-wiki-Vote.json  web-Google.json  web-NotreDame.json  web-Stanford.json
summarized/undirected/: CA-AstroPh.json  CA-GrQc.json  Email-EuAll.json  ca-coauthors-dblp.json  musae_git_edges.json
summarized/very_large_graphs/: com-orkut.ungraph.json  com-youtube.ungraph.json  vk.json
tests/: tests_analyzer.cpp  tests_analyzer.h  tests_graph.cpp
